numerous code improvements
Due to the sheer amount of changes, there is no exact changelog. There should be no functional changes stemming from this commit. The changes include but are not limited to:
- Merging if statements for more concise code
- Changing many fields to private and using getters and setters instead
- Logic simplifications
- Changes to benefit readability
- Type generalization
- Making use of more fitting language features and class methods
- Removal of unused code