@@ -3,8 +3,6 @@ package net.geforcemods.securitycraft.datagen;
 import java.util.Arrays;
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
-
 import net.geforcemods.securitycraft.SCContent;
 import net.geforcemods.securitycraft.SecurityCraft;
 import net.geforcemods.securitycraft.blocks.mines.BaseFullMineBlock;
@@ -42,7 +40,13 @@ import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.registries.RegistryObject;
 
 public class BlockModelAndStateGenerator extends BlockStateProvider {
-	private static final Map<Direction, EnumProperty<WallSide>> DIR_TO_WALL_HEIGHT = ImmutableMap.of(Direction.EAST, BlockStateProperties.EAST_WALL, Direction.NORTH, BlockStateProperties.NORTH_WALL, Direction.SOUTH, BlockStateProperties.SOUTH_WALL, Direction.WEST, BlockStateProperties.WEST_WALL);
+	//@formatter:off
+	private static final Map<Direction, EnumProperty<WallSide>> DIR_TO_WALL_HEIGHT = Map.of(
+			Direction.EAST, BlockStateProperties.EAST_WALL,
+			Direction.NORTH, BlockStateProperties.NORTH_WALL,
+			Direction.SOUTH, BlockStateProperties.SOUTH_WALL,
+			Direction.WEST, BlockStateProperties.WEST_WALL);
+	//@formatter:on
 	private final SCBlockModelProvider scModels;
 
 	public BlockModelAndStateGenerator(DataGenerator gen, ExistingFileHelper exFileHelper) {
@@ -57,7 +61,7 @@ public class BlockModelAndStateGenerator extends BlockStateProvider {
 			Block block = obj.get();
 			Item item = block.asItem();
 
-			if (item.getCreativeTabs().contains(SecurityCraft.decorationTab)) {
+			if (item.getCreativeTabs().contains(SecurityCraft.DECORATION_TAB)) {
 				if (block instanceof ReinforcedSlabBlock)
 					reinforcedSlabBlock(block);
 				else if (block instanceof ReinforcedStainedGlassBlock)
@@ -71,7 +75,7 @@ public class BlockModelAndStateGenerator extends BlockStateProvider {
 				else if (block instanceof ReinforcedCarpetBlock)
 					reinforcedCarpetBlock(block);
 			}
-			else if (item.getCreativeTabs().contains(SecurityCraft.mineTab) && block instanceof BaseFullMineBlock mine && !(mine instanceof DeepslateMineBlock))
+			else if (item.getCreativeTabs().contains(SecurityCraft.MINE_TAB) && block instanceof BaseFullMineBlock mine && !(mine instanceof DeepslateMineBlock))
 				blockMine(mine.getBlockDisguisedAs(), block);
 		}
 
@@ -178,7 +182,11 @@ public class BlockModelAndStateGenerator extends BlockStateProvider {
 	public void fourWayWallHeight(MultiPartBlockStateBuilder builder, ModelFile model, WallSide height) {
 		//@formatter:off
 		Arrays.stream(Direction.values()).filter(dir -> dir.getAxis().isHorizontal()).forEach(dir -> {
-			builder.part().modelFile(model).rotationY((((int) dir.toYRot()) + 180) % 360).uvLock(true).addModel()
+			builder.part()
+			.modelFile(model)
+			.rotationY((((int) dir.toYRot()) + 180) % 360)
+			.uvLock(true)
+			.addModel()
 			.condition(DIR_TO_WALL_HEIGHT.get(dir), height);
 		});
 		//@formatter:on
@@ -279,7 +287,11 @@ public class BlockModelAndStateGenerator extends BlockStateProvider {
 
 			//@formatter:off
 			return ConfiguredModel.builder()
-					.modelFile(shape == StairsShape.STRAIGHT ? stairs : shape == StairsShape.INNER_LEFT || shape == StairsShape.INNER_RIGHT ? stairsInner : stairsOuter)
+					.modelFile(switch(shape) {
+						case STRAIGHT -> stairs;
+						case INNER_LEFT, INNER_RIGHT -> stairsInner;
+						default -> stairsOuter;
+					})
 					.rotationX(half == Half.BOTTOM ? 0 : 180)
 					.rotationY(yRot)
 					.uvLock(yRot != 0 || half == Half.TOP)
